--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,18 @@
+certifi==2017.11.5
+chardet==3.0.4
 Django==1.11.7
+django-cacheops==4.0.3
+django-extensions==1.9.7
+django-redis==4.8.0
 djangorestframework==3.7.3
+funcy==1.10
+idna==2.6
+praw==5.2.0
+prawcore==0.12.0
 pytz==2017.3
+redis==2.10.6
+requests==2.18.4
+six==1.11.0
+typing==3.6.2
+update-checker==0.16
+urllib3==1.22
