--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,10 @@ services:
     command: python3 counter/manage.py runserver 0.0.0.0:8000
     ports:
       - "8000:8000"
+    depends_on:
+      - redis
+  redis:
+    image: redis
+    ports:
+      - "6379"
+
