--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@ Django==1.11.7
 django-cacheops==4.0.3
 django-extensions==1.9.7
 django-redis==4.8.0
+django-redis-cache==1.7.1
 djangorestframework==3.7.3
 funcy==1.10
+hiredis==0.2.0
 idna==2.6
 praw==5.2.0
 prawcore==0.12.0
